# RoutePlanning

./: .gitignore  README.md  SECURITY.md  build.gradle  firestore.rules  local.defaults.properties  settings.gradle
.github/workflows/: ci.yml
app/: build.gradle  google-services.example.json  google-services.json
app/schemas/com.example.routeplanning.mvp.data.local.RoutePlanningDatabase/: 1.json  2.json  3.json
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_swap.xml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/route_planning_api/: __init__.py  dependencies.py  main.py  models.py  otp.py  planner.py  service_area.py  settings.py  stops.py
backend/src/route_planning_api/gtfs/: __init__.py  cli.py  profiler.py  project_cli.py  projector.py  validator.py
backend/tests/: __init__.py  test_gtfs_profiler.py  test_gtfs_projector.py  test_gtfs_validator.py  test_health.py  test_journeys.py  test_otp.py  test_settings.py  test_stops.py
data/: README.md
data/snapshots/: aucorsa-20260225-assumed-20260719.json  aucorsa-20260225.json  osm-cordoba-20260717.json
deploy/oracle/: Caddyfile  README.md  deploy.sh  docker-compose.yml
gradle/wrapper/: gradle-wrapper.properties
infra/backend/: README.md  start.ps1
infra/osm/: Dockerfile  README.md  extract-cordoba.ps1
infra/otp/: README.md  build-graph.ps1  docker-command.ps1  docker-compose.yml  download-renfe-gtfs.ps1  prepare-data.ps1  start.ps1  stop.ps1
infra/otp/config/: build-config.json  otp-config.json
scripts/: generate_launcher_icons.ps1
(+63 files in other folders)
